--- a/ARIS1-2/ARIS1-2.csproj
+++ b/ARIS1-2/ARIS1-2.csproj
@@ -44,17 +44,18 @@
   <ItemGroup>
     <Compile Include="Clinic.cs" />
     <Compile Include="ConsoleClinicReader.cs" />
+    <Compile Include="ConsoleUI.cs" />
     <Compile Include="FileClinicReader.cs" />
     <Compile Include="GeneralClinicBinder.cs" />
-    <Compile Include="GeneralPhoneValidator.cs" />
+    <Compile Include="GeneralClinicValidator.cs" />
     <Compile Include="IClinicBinder.cs" />
     <Compile Include="IClinicReader.cs" />
     <Compile Include="IClinicSaver.cs" />
     <Compile Include="IClinicValidator.cs" />
-    <Compile Include="IStorage.cs" />
+    <Compile Include="Storage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TextClinicSaver.cs" />
+    <Compile Include="FileClinicSaver.cs" />
     <Compile Include="Utilites.cs" />
   </ItemGroup>
   <ItemGroup>
