--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A35D6725-5739-41E0-A66A-E662C2EB6EEE}</ProjectGuid>
+    <ProjectGuid>{E461F59A-50D3-4B24-B29D-C87A34D357D2}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ARIS1_2</RootNamespace>
-    <AssemblyName>ARIS1-2</AssemblyName>
+    <RootNamespace>Client</RootNamespace>
+    <AssemblyName>Client</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -42,21 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Clinic.cs" />
-    <Compile Include="ConsoleClinicReader.cs" />
-    <Compile Include="ConsoleUI.cs" />
-    <Compile Include="FileClinicReader.cs" />
-    <Compile Include="GeneralClinicBinder.cs" />
-    <Compile Include="GeneralClinicValidator.cs" />
-    <Compile Include="interfaces\IClinicBinder.cs" />
-    <Compile Include="interfaces\IClinicReader.cs" />
-    <Compile Include="interfaces\IClinicSaver.cs" />
-    <Compile Include="interfaces\IClinicValidator.cs" />
-    <Compile Include="Storage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="FileClinicSaver.cs" />
-    <Compile Include="Utilites.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
