--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Clinic.cs" />
     <Compile Include="ConsoleClinicReader.cs" />
     <Compile Include="IClinicReader.cs" />
     <Compile Include="Program.cs" />
